prime sezioni main

--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,10 @@
 .section-list{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  flex-wrap: wrap;
   background-color: green;
+  text-align: center;
 }
 
 .section-list ul{
@@ -65,6 +67,30 @@
 
 .section-list li{
   display: inline-block;
+  margin-right: 40px;
+}
+
+.container-flex{
+  display: flex;
+  flex-flow: row wrap;
+  background-color: grey;
+}
+
+.main-margin{
+  margin-left: 200px;
+  color: white;
+}
+
+.flex-item{
+  width: 150px;
+  height: 150px;
+  background-color: blue;
+  padding: 15px;
+}
+
+.container-flex ul li{
+  display: inline-block;
+  list-style: none;
 }
 
 /* FOOTER */
