--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@
   display: flex;
   flex-flow: row wrap;
   background-color: grey;
+  margin-bottom: 30px;
 }
 
 .main-margin{
@@ -91,6 +92,10 @@
 .container-flex ul li{
   display: inline-block;
   list-style: none;
+}
+
+.circle{
+  border-radius: 90px;
 }
 
 /* FOOTER */
