--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@
 .debug-aside{
   float: left;
   width: 200px;
-  height: 100vh;
+  height: calc(100vh - 80px);
   background-color: red;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .upgrade{
@@ -99,3 +102,14 @@
 }
 
 /* FOOTER */
+.footer-bar{
+  height: 80px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  background-color: green;
+  position: fixed;
+  bottom: 0;
+}
